solving 3d text stretching issue

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         overflow: hidden;
       }
     </style>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-black">
     <div id="root"></div>
